kind/setup/003_tekton/tekton-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard-ingress
  namespace: tekton-pipelines
  annotations:
    cert-manager.io/cluster-issuer: self-signed
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: tekton-dashboard.127.0.0.1.nip.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tekton-dashboard
              port:
                number: 9097
  - host: tekton-dashboard.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tekton-dashboard
              port:
                number: 9097
  tls:
    - secretName: https-cert
      hosts:
        - tekton-dashboard.127.0.0.1.nip.io
        - tekton-dashboard.local
